--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "antd": "^4.22.3",
+    "axios": "^0.27.2",
     "firebase": "^9.9.2",
     "mdb-react-ui-kit": "^4.1.0",
     "react": "^18.2.0",
