--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mdb-react-ui-kit": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
